force-app/main/default/objects/Case/fields/Appointment_Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Rescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Rescheduled</label>
    <type>Checkbox</type>
</CustomField>