force-app/main/default/objects/Case/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <label>Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Referral</fullName>
                <default>true</default>
                <label>New Referral</label>
            </value>
            <value>
                <fullName>MNITS L/U</fullName>
            </value>
            <value>
                <fullName>Comp Needed</fullName>
            </value>
            <value>
                <fullName>Prescreen</fullName>
            </value>
            <value>
                <fullName>Prescreen Call 1</fullName>
            </value>
            <value>
                <fullName>Prescreen Call 2</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Record Review</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
            <value>
                <fullName>Care Coordination</fullName>
            </value>
            <value>
                <fullName>E-mail Sent</fullName>
            </value>
            <value>
                <fullName>First Call Attempt</fullName>
            </value>
            <value>
                <fullName>Second Call Attempt</fullName>
            </value>
            <value>
                <fullName>No Contact Made</fullName>
            </value>
            <value>
                <fullName>Referred to OMH</fullName>
            </value>
            <value>
                <fullName>Referred External</fullName>
            </value>
            <value>
                <fullName>Screening Complete</fullName>
            </value>
            <value>
                <fullName>Intake Packet Sent</fullName>
            </value>
            <value>
                <fullName>Intake Scheduled</fullName>
            </value>
            <value>
                <fullName>Intake Complete</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Background Check</fullName>
            </value>
            <value>
                <fullName>Semi-Qualified</fullName>
            </value>
            <value>
                <fullName>Navigation</fullName>
            </value>
            <value>
                <fullName>Reminder Call</fullName>
            </value>
            <value>
                <fullName>After Comp Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>