force-app/main/default/objects/Case/fields/caseman_Branch__c.field-meta.xml
<CustomField>
    <fullName>caseman_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case (Branch)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>