force-app/main/default/objects/Case/fields/caseman_IncidentDateTime__c.field-meta.xml
<CustomField>
    <fullName>caseman_IncidentDateTime__c</fullName>
    <label>Incident Date and Time</label>
    <type>DateTime</type>
</CustomField>