force-app/main/default/objects/Case/fields/caseman_IncidentType__c.field-meta.xml
<CustomField>
    <fullName>caseman_IncidentType__c</fullName>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Place Holder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>