force-app/main/default/objects/Case/fields/caseman_Intake__c.field-meta.xml
<CustomField>
    <fullName>caseman_Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Intake</relationshipLabel>
    <relationshipName>Intake</relationshipName>
    <type>Lookup</type>
</CustomField>