force-app/main/default/objects/Case/fields/caseman_LocationNotes__c.field-meta.xml
<CustomField>
    <fullName>caseman_LocationNotes__c</fullName>
    <label>Location Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>