force-app/main/default/objects/Case/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <label>Checklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Medication List</fullName>
            </value>
            <value>
                <fullName>MN Choices Assessment/Summary</fullName>
            </value>
            <value>
                <fullName>Proof of Income</fullName>
            </value>
            <value>
                <fullName>Release of Information/Exchange of Information</fullName>
            </value>
            <value>
                <fullName>Review and Approve MN Choices Assessment</fullName>
            </value>
            <value>
                <fullName>Review Nursing Supports and the MN Choices Assessment</fullName>
            </value>
            <value>
                <fullName>Schedule Interview with Client/Care Team</fullName>
            </value>
            <value>
                <fullName>Complete Intake/Interview Screening Form</fullName>
            </value>
            <value>
                <fullName>Inform Client/Team of Intake Decision</fullName>
            </value>
            <value>
                <fullName>Convert Client in Salesforce and Move to Credible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>