force-app/main/default/objects/Case/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tobacco Policy</fullName>
            </value>
            <value>
                <fullName>Pass Policy</fullName>
            </value>
            <value>
                <fullName>Covid Policy</fullName>
            </value>
            <value>
                <fullName>Found another placement</fullName>
            </value>
            <value>
                <fullName>Not ready to admit</fullName>
            </value>
            <value>
                <fullName>Looking for other services</fullName>
            </value>
            <value>
                <fullName>Past Behavior</fullName>
            </value>
            <value>
                <fullName>Needs higher level of care</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>No Contact</fullName>
            </value>
            <value>
                <fullName>No Reason Given</fullName>
            </value>
            <value>
                <fullName>Needs Lower Level of Care</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Found Another Provider</fullName>
            </value>
            <value>
                <fullName>No Longer Interested</fullName>
            </value>
            <value>
                <fullName>Comp Eval</fullName>
            </value>
            <value>
                <fullName>Out of Service Area</fullName>
            </value>
            <value>
                <fullName>Clinical Reason</fullName>
            </value>
            <value>
                <fullName>Did not Complete Intake Process</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>