force-app/main/default/objects/Case/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anoka County</fullName>
            </value>
            <value>
                <fullName>Carver County</fullName>
            </value>
            <value>
                <fullName>Dakota County</fullName>
            </value>
            <value>
                <fullName>Hennepin County</fullName>
            </value>
            <value>
                <fullName>Ramsey County</fullName>
            </value>
            <value>
                <fullName>Aitkin County</fullName>
            </value>
            <value>
                <fullName>Becker County</fullName>
            </value>
            <value>
                <fullName>Beltrami County</fullName>
            </value>
            <value>
                <fullName>Benton County</fullName>
            </value>
            <value>
                <fullName>Big Stone County</fullName>
            </value>
            <value>
                <fullName>Blue Earth County</fullName>
            </value>
            <value>
                <fullName>Brown County</fullName>
            </value>
            <value>
                <fullName>Carlton County</fullName>
            </value>
            <value>
                <fullName>Cass County</fullName>
            </value>
            <value>
                <fullName>Chippewa County</fullName>
            </value>
            <value>
                <fullName>Chisago County</fullName>
            </value>
            <value>
                <fullName>Clay County</fullName>
            </value>
            <value>
                <fullName>Clearwater County</fullName>
            </value>
            <value>
                <fullName>Cook County</fullName>
            </value>
            <value>
                <fullName>Cottonwood County</fullName>
            </value>
            <value>
                <fullName>Crow Wing County</fullName>
            </value>
            <value>
                <fullName>Dodge County</fullName>
            </value>
            <value>
                <fullName>Douglas County</fullName>
            </value>
            <value>
                <fullName>Faribault County</fullName>
            </value>
            <value>
                <fullName>Fillmore County</fullName>
            </value>
            <value>
                <fullName>Freeborn County</fullName>
            </value>
            <value>
                <fullName>Goodhue County</fullName>
            </value>
            <value>
                <fullName>Grant County</fullName>
            </value>
            <value>
                <fullName>Houston County</fullName>
            </value>
            <value>
                <fullName>Hubbard County</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>