force-app/main/default/objects/Case/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>IF(ISBLANK(Referral__c),
			CreatedDate,
			Referral__r.CreatedDate
			)</formula>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>