force-app/main/default/objects/Case/fields/Date_of_Last_Comp__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Comp__c</fullName>
    <formula>Contact.Date_of_Last_Comp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Last Comp</label>
    <type>Date</type>
</CustomField>