force-app/main/default/objects/Case/fields/Date_of_Last_SDoH__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_SDoH__c</fullName>
    <label>Date of Last SDoH</label>
    <type>Date</type>
</CustomField>