force-app/main/default/objects/Case/fields/Discharge_Extension_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Extension_Notes__c</fullName>
    <label>Discharge/Extension Notes</label>
    <type>TextArea</type>
</CustomField>