force-app/main/default/objects/Case/fields/Ext_Code__c.field-meta.xml
<CustomField>
    <fullName>Ext_Code__c</fullName>
    <formula>Ref_Organization__r.Ext_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ext Code</label>
    <type>Text</type>
</CustomField>