force-app/main/default/objects/Case/fields/External_Resources_Provided__c.field-meta.xml
<CustomField>
    <fullName>External_Resources_Provided__c</fullName>
    <label>External Resources Provided</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>