force-app/main/default/objects/Case/fields/FindHelp_ROI__c.field-meta.xml
<CustomField>
    <fullName>FindHelp_ROI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this client/family want to connect with FindHelp?</inlineHelpText>
    <label>FindHelp ROI</label>
    <type>Checkbox</type>
</CustomField>