force-app/main/default/objects/Case/fields/Gender_Identity__c.field-meta.xml
<CustomField>
    <fullName>Gender_Identity__c</fullName>
    <label>Gender Identity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agender</fullName>
            </value>
            <value>
                <fullName>Cis Female</fullName>
            </value>
            <value>
                <fullName>Cis Male</fullName>
            </value>
            <value>
                <fullName>Client Refused</fullName>
            </value>
            <value>
                <fullName>Nonbinary</fullName>
            </value>
            <value>
                <fullName>Trans Female</fullName>
            </value>
            <value>
                <fullName>Trans Male</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>