force-app/main/default/objects/Case/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical Core 10-14</fullName>
            </value>
            <value>
                <fullName>Critical Core Skills Group 14-18</fullName>
            </value>
            <value>
                <fullName>SEALS Skills Group 11-14</fullName>
            </value>
            <value>
                <fullName>SEALS Skills Group 15-17</fullName>
            </value>
            <value>
                <fullName>Creative Expression Art Therapy 12-15</fullName>
            </value>
            <value>
                <fullName>Creative Expression Art Therapy 18-25</fullName>
            </value>
            <value>
                <fullName>Impulse Control Skills Group</fullName>
            </value>
            <value>
                <fullName>Self Discovery Therapy Group</fullName>
            </value>
            <value>
                <fullName>Effectively Communication</fullName>
            </value>
            <value>
                <fullName>Integrative Health &amp; Medicine Group</fullName>
            </value>
            <value>
                <fullName>Feel the Music</fullName>
            </value>
            <value>
                <fullName>Highview Skills Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>