force-app/main/default/objects/Case/fields/Guardian__c.field-meta.xml
<CustomField>
    <fullName>Guardian__c</fullName>
    <label>Guardian</label>
    <length>80</length>
    <type>Text</type>
</CustomField>