force-app/main/default/objects/Case/fields/Guardian_Notes__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Notes__c</fullName>
    <label>Guardian Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>