force-app/main/default/objects/Case/fields/Guardian_Phone__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Phone__c</fullName>
    <inlineHelpText>Use this field if the guardian&apos;s phone number is different than the primary contact&apos;s phone number</inlineHelpText>
    <label>Guardian Phone</label>
    <type>Phone</type>
</CustomField>