force-app/main/default/objects/Case/fields/Housing_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Status__c</fullName>
    <label>Housing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homeless</fullName>
            </value>
            <value>
                <fullName>Independent Living</fullName>
            </value>
            <value>
                <fullName>Residential (in facility)</fullName>
            </value>
            <value>
                <fullName>Corrections Facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>