force-app/main/default/objects/Case/fields/Income__c.field-meta.xml
<CustomField>
    <fullName>Income__c</fullName>
    <label>Income</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSI</fullName>
            </value>
            <value>
                <fullName>RSDI</fullName>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>Earned Income</fullName>
            </value>
            <value>
                <fullName>GRH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>