force-app/main/default/objects/Case/fields/Income_Amount__c.field-meta.xml
<CustomField>
    <fullName>Income_Amount__c</fullName>
    <label>Income Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>