force-app/main/default/objects/Case/fields/Initially_School_Linked_Referral__c.field-meta.xml
<CustomField>
    <fullName>Initially_School_Linked_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initially School Linked Referral</label>
    <type>Checkbox</type>
</CustomField>