force-app/main/default/objects/Case/fields/Insurance_Verified_On__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Verified_On__c</fullName>
    <label>Insurance Verified On</label>
    <type>DateTime</type>
</CustomField>