force-app/main/default/objects/Case/fields/Int_Ext__c.field-meta.xml
<CustomField>
    <fullName>Int_Ext__c</fullName>
    <label>Int/Ext</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>