force-app/main/default/objects/Case/fields/Intake_Complete_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Intake_Complete_Status_Date__c</fullName>
    <label>_Intake Complete Status Date</label>
    <type>DateTime</type>
</CustomField>