force-app/main/default/objects/Case/fields/Intake_Location__c.field-meta.xml
<CustomField>
    <fullName>Intake_Location__c</fullName>
    <label>Intake Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>