force-app/main/default/objects/Case/fields/Intake_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Intake_Outcome__c</fullName>
    <label>Intake Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended &amp; Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Not Ready to Intake</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Beds Full</fullName>
            </value>
            <value>
                <fullName>Intake Processing Limitations</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Referred to Another Service</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>COVID</fullName>
            </value>
            <value>
                <fullName>Navigation</fullName>
            </value>
            <value>
                <fullName>No Contact</fullName>
            </value>
            <value>
                <fullName>Denied by Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>