force-app/main/default/objects/Case/fields/Intake_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Intake_Scheduled__c</fullName>
    <label>Intake Scheduled</label>
    <type>DateTime</type>
</CustomField>