force-app/main/default/objects/Case/fields/Internal_Integration__c.field-meta.xml
<CustomField>
    <fullName>Internal_Integration__c</fullName>
    <label>Internal Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARMHS</fullName>
            </value>
            <value>
                <fullName>ATCM</fullName>
            </value>
            <value>
                <fullName>BHH</fullName>
            </value>
            <value>
                <fullName>Crisis</fullName>
            </value>
            <value>
                <fullName>CTCM</fullName>
            </value>
            <value>
                <fullName>Day Treatment</fullName>
            </value>
            <value>
                <fullName>Housing First</fullName>
            </value>
            <value>
                <fullName>IRTS</fullName>
            </value>
            <value>
                <fullName>OMH</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>SBMH</fullName>
            </value>
            <value>
                <fullName>DHHS</fullName>
            </value>
            <value>
                <fullName>CIS</fullName>
            </value>
            <value>
                <fullName>AACT</fullName>
            </value>
            <value>
                <fullName>WCM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>