force-app/main/default/objects/Case/fields/Internal_Providers__c.field-meta.xml
<CustomField>
    <fullName>Internal_Providers__c</fullName>
    <label>Internal Providers</label>
    <type>TextArea</type>
</CustomField>