force-app/main/default/objects/Case/fields/Interview_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Interview_Scheduled__c</fullName>
    <label>Interview Scheduled</label>
    <type>DateTime</type>
</CustomField>