force-app/main/default/objects/Case/fields/IRTS_Program_Accepted_To__c.field-meta.xml
<CustomField>
    <fullName>IRTS_Program_Accepted_To__c</fullName>
    <label>IRTS Program Accepted To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>8th Street</fullName>
            </value>
            <value>
                <fullName>Anchor</fullName>
            </value>
            <value>
                <fullName>Chicago Avenue</fullName>
            </value>
            <value>
                <fullName>Diane Ahrens</fullName>
            </value>
            <value>
                <fullName>Huss</fullName>
            </value>
            <value>
                <fullName>Maghakian</fullName>
            </value>
            <value>
                <fullName>Nancy Page</fullName>
            </value>
            <value>
                <fullName>Riverwind</fullName>
            </value>
            <value>
                <fullName>Steiner Kelting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>