force-app/main/default/objects/Case/fields/IRTS_Waitlist__c.field-meta.xml
<CustomField>
    <fullName>IRTS_Waitlist__c</fullName>
    <label>IRTS Waitlist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8th Street</fullName>
            </value>
            <value>
                <fullName>Anchor</fullName>
            </value>
            <value>
                <fullName>Chicago Ave</fullName>
            </value>
            <value>
                <fullName>Huss</fullName>
            </value>
            <value>
                <fullName>Maghakian</fullName>
            </value>
            <value>
                <fullName>Riverwind</fullName>
            </value>
            <value>
                <fullName>Steiner Kelting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>