force-app/main/default/objects/Case/fields/Is_Homeless__c.field-meta.xml
<CustomField>
    <fullName>Is_Homeless__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Homeless</label>
    <type>Checkbox</type>
</CustomField>