force-app/main/default/objects/Case/fields/Length_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Stay__c</fullName>
    <formula>If(DateValue(ClosedDate) - DateValue(CreatedDate) = 1, 
Text(DateValue(ClosedDate) - DateValue(CreatedDate)) &amp; &apos; day&apos;,
Text(DateValue(ClosedDate) - DateValue(CreatedDate)) &amp; &apos; days&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of Stay</label>
    <type>Text</type>
</CustomField>