force-app/main/default/objects/Case/fields/LTR_Waitlist__c.field-meta.xml
<CustomField>
    <fullName>LTR_Waitlist__c</fullName>
    <label>LTR Waitlist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colonial</fullName>
            </value>
            <value>
                <fullName>Dakota Apartment Program/ICS</fullName>
            </value>
            <value>
                <fullName>DSL</fullName>
            </value>
            <value>
                <fullName>Foliage</fullName>
            </value>
            <value>
                <fullName>Heather Ridge</fullName>
            </value>
            <value>
                <fullName>McAndrews</fullName>
            </value>
            <value>
                <fullName>Montreal Courts</fullName>
            </value>
            <value>
                <fullName>Parkway Place</fullName>
            </value>
            <value>
                <fullName>Penn House</fullName>
            </value>
            <value>
                <fullName>People II</fullName>
            </value>
            <value>
                <fullName>Riverhills</fullName>
            </value>
            <value>
                <fullName>Scott House</fullName>
            </value>
            <value>
                <fullName>Upton House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>