force-app/main/default/objects/Case/fields/Mental_Health_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Diagnosis__c</fullName>
    <formula>Contact.Mental_Health_Diagnosis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mental Health Diagnosis</label>
    <type>Text</type>
</CustomField>