force-app/main/default/objects/Case/fields/Move_In_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Move_In_Scheduled__c</fullName>
    <label>Move In Scheduled</label>
    <type>DateTime</type>
</CustomField>