force-app/main/default/objects/Case/fields/Needs_Clinical_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Clinical_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Clinical Review</label>
    <type>Checkbox</type>
</CustomField>