force-app/main/default/objects/Case/fields/OMH_Therapy__c.field-meta.xml
<CustomField>
    <fullName>OMH_Therapy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OMH Therapy</label>
    <type>Checkbox</type>
</CustomField>