force-app/main/default/objects/Case/fields/Open_to_Groups__c.field-meta.xml
<CustomField>
    <fullName>Open_to_Groups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open to Groups</label>
    <type>Checkbox</type>
</CustomField>