force-app/main/default/objects/Case/fields/Parent_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian__c</fullName>
    <formula>Contact.Parent_Guardian__c</formula>
    <label>Parent/Guardian</label>
    <type>Text</type>
</CustomField>